2011-05-21  Alan Modra  <amodra@gmail.com>

	PR 12763
	* ld-elf/tdata3.s: New test.
	* ld-elf/tbss3.s: New test.
	* ld-elf/binutils.exp: Consolidate tbss and tdata tests.

2011-05-20  Bernd Schmidt  <bernds@codesourcery.com>

	* ld-tic6x/pcr-reloc.d: New test.
	* ld-tic6x/pcr-reloc.s: New test.

2011-05-18  Nick Clifton  <nickc@redhat.com>

	PR ld/12761
	* lib/ld-lib.exp (run_cc_link_tests): Add an optional 8th
	parameter - an expected warning message from the linker.
	* ld-elf/shared.exp (build_tests): Expect a warning message when
	building the libbarw.so library.

	* ld-elf/shared.exp: Run library building tests even when not
	building a native toolchain.

2011-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-scripts/phdrs.exp: Replace --private with
	--private-headers for objdump.
	* ld-scripts/phdrs2.exp: Likewise.

2011-05-15  Richard Sandiford  <rdsandiford@googlemail.com>

	* lib/ld-lib.exp (run_ld_link_tests): Simplify pass/fail logic.
	Fail if the link command fails and if no test rules are defined.
	* ld-mips-elf/reloc-6a.s, ld-mips-elf/reloc-6b.s: New tests.
	* ld-mips-elf/mips-elf.exp: Run them.

2011-05-13  Bernd Schmidt  <bernds@codesourcery.com>

	* ld-tic6x/dsbt.ld (OUTPUT_FORMAT): Add.
	* ld-tic6x/tic6x.exp: Add OSABI tests.

2011-05-13  Alan Modra  <amodra@gmail.com>

	* ld-elf/flags1.d: Don't xfail tic6x.
	* ld-scripts/weak.exp: Correct comments.  Don't xfail sh-pe.  Remove
	redundant xfail.
	* ld-selective/sel-dump.exp: Don't xfail alpha.
	* ld-selective/selective.exp: Run for alpha.
	* ld-undefined/weak-undef.exp: Don't xfail hppa64.

2011-05-12  Bernd Schmidt  <bernds@codesourcery.com>

	* config/default.exp (ld_assemble): Pass flags parameter to
	default_ld_assemble.
	(ld_assemble_flags): New function.
	* ld-elf/frame.exp: Pass -mpic and -mpid flags to the assembler on
	tic6x.
	* ld-elf/exclude.exp: Likewise.
	* lib/ld-lib.exp (default_ld_assemble): Take extra argument in_flags
	and pass it to the assembler.
