@@ -1,3 +1,8 @@
+2011-05-21  Hans-Peter Nilsson  <hp@axis.com>
+
+	* ld-cris/tls-e-tpoffcomm1.d: Adjust for PR12763 change removing
+	empty program header.
+
 2011-05-21  Alan Modra  <amodra@gmail.com>
 
 	PR 12763
